@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.11
 
+  *) mod_cache: We must ignore quoted-string values that appear in a
+     Cache-Control header. PR 50199. [Graham Leggett]
+
   *) mod_dav: Revert change to send 501 error if unknown Content-* header is
     received for a PUT request. PR 42978. [Stefan Fritsch]
 
